Project scroll bug for mobile view

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             <div class="footer-content">
                 <div class="footer-left">
                     <h4>Swaroop Chandre</h4>
-                    <p>AI/ML Solutions Architect</p>
+                    <p>GEN AI Solutions Architect / AI Engineer</p>
                 </div>
                 <div class="footer-right">
                     <div class="social-links">
